--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/material-top-tabs": "^6.4.2",
     "@react-navigation/native": "^6.1.18",
@@ -24,7 +25,8 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-tab-view": "^3.0.0",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-vector-icons": "^8.0.0",
+    "@react-native-community/slider": "4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
